Cambio de prueba

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <li><a href="#Clasificador">Clasificador de desechos</a></li>
       <li><a href="#calculadora">calculadora Ecológica</a></li>
       <li><a href="#">Puntos de Reciclaje</a></li>
+      <li><a href="#contacto">Contactanos</a></li>
     </ul>
   </nav>
 
@@ -66,6 +67,7 @@
          <a href="#" target="_blank" class="mi-boton"> CONSULTORIA</a>
          <a href="#" target="_blank" class="mi-boton">RESEÑAS</a>
           <a href="#" target="_blank" class="mi-boton">VIDEOS</a>
+
       </div>
     
 
@@ -123,7 +125,7 @@
     <div id="resultados"></div>
 
   </main>
-  <footer>
+  <footer id="contacto">
     <p>&copy; 2025 ReNova - Todos los derechos reservados</p>
   </footer>
 
